--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,7 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "terminal.integrated.fontSize": 25,
+  "editor.fontSize": 35
 }
